Add Coming soon between tagline and footer

--- a/index.html
+++ b/index.html
@@ -82,6 +82,15 @@
       }
     }
 
+    .coming-soon {
+      font-family: 'Inter', sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      letter-spacing: 0.4em;
+      text-transform: uppercase;
+      margin-top: 4rem;
+    }
+
     footer {
       position: fixed;
       bottom: 0;
@@ -103,6 +112,7 @@
   <main>
     <h1 class="headline">AVOS<br>TECHNOLOGIES</h1>
     <p class="tagline">THE UNIVERSAL SIZING ECOSYSTEM FOR THE FUTURE OF FASHION.</p>
+    <p class="coming-soon">Coming soon</p>
   </main>
   <footer>
     2026 | THE ARCHITECTURE OF CERTAINTY.
