Update footer to include sustainability

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <p class="coming-soon">Coming soon</p>
   </main>
   <footer>
-    2026 | THE ARCHITECTURE OF CERTAINTY.
+    2026 | THE ARCHITECTURE OF CERTAINTY AND SUSTAINABILITY.
   </footer>
 </body>
 </html>
